修改動畫數字不同步的問題

--- a/HW_getnum.html
+++ b/HW_getnum.html
@@ -202,7 +202,7 @@
                 runumtext2.html(runumberarray[4]).animate({
                     left: "-100%"
                 }, 650, function () {
-                    runumtext3.html(runumberarray[5]).animate({
+                    runumtext3.html(numberarray[0]).animate({
                         left: "50%"
                     }, 400, function () {
                         runumtext1.html(runumtext3.html());
